--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "autoprefixer": "^10.2.4",
+    "postcss": "^8.2.7",
+    "tailwindcss": "^2.0.3",
     "typescript": "4.0"
   },
   "license": "MIT"
