--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "redux": "^4.0.5",
     "web3": "^1.3.4"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-redux": "^7.1.16",
     "autoprefixer": "^10.2.4",
     "postcss": "^8.2.7",
+    "react-redux": "^7.2.2",
+    "redux-devtools": "^3.7.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "tailwindcss": "^2.0.3",
     "typescript": "4.0"
   },
