--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "web3": "^1.3.4"
   },
   "devDependencies": {
+    "@metamask/onboarding": "^1.0.0",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
