--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@coingecko/cg-api-ts": "^0.0.45",
     "@toruslabs/openlogin": "^0.5.4",
     "@toruslabs/torus-direct-web-sdk": "^4.11.1",
+    "@toruslabs/torus-embed": "^1.10.4",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
