--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "redux": "^4.0.5",
+    "swr": "^0.5.5",
     "web3": "^1.3.4"
   },
   "devDependencies": {
