--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@coingecko/cg-api-ts": "^0.0.45",
+    "@headlessui/react": "^1.1.1",
     "@toruslabs/openlogin": "^0.5.4",
     "@toruslabs/torus-direct-web-sdk": "^4.12.0",
     "@toruslabs/torus-embed": "^1.10.4",
