--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "ethers": "^5.1.3",
     "file-saver": "^2.0.5",
     "next": "latest",
+    "pusher-js": "^7.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-toast-notifications": "^2.4.4",
     "redux": "^4.0.5",
     "swr": "^0.5.5",
     "web3": "^1.3.4"
