--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@toruslabs/torus-direct-web-sdk": "^4.12.0",
     "@toruslabs/torus-embed": "^1.10.4",
     "axios": "^0.21.1",
+    "dotenv-webpack": "^7.0.2",
     "elliptic": "^6.5.4",
     "ethers": "^5.1.3",
     "file-saver": "^2.0.5",
