--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "lint": "eslint ./components/** ./pages/** ./hooks/** ./store/** ./utils/** -c .eslintrc.json --ext js,jsx,ts,tsx --no-error-on-unmatched-pattern",
+    "lint-fix": "eslint ./components/** ./pages/** ./hooks/** ./store/** ./utils/** -c .eslintrc.json --fix --ext js,jsx,ts,tsx --no-error-on-unmatched-pattern"
   },
   "dependencies": {
     "@coingecko/cg-api-ts": "^0.0.45",
@@ -33,8 +35,15 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.16",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^10.2.4",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "postcss": "^8.2.7",
+    "prettier": "^2.2.1",
     "react-redux": "^7.2.2",
     "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.8",
